--- a/templates/users/users_create.html
+++ b/templates/users/users_create.html
@@ -2,9 +2,24 @@
 {% block title %}Home{% endblock title %}
 {% block body %}
 <div class="card">
-    <div class="card-header">User creation</div>
+    <div class="card-header">User creation form</div>
     <div class="card-body">
-        
+        <form method='post' novalidate>
+            {% if basic_form and profile_form %}
+                <div class='user_config'>
+                    {% include 'users/form_render.html' with form=basic_form title='Basic details' only %}
+                </div>
+                <div class="user_profile mt-2">
+                    {% include 'users/form_render.html' with form=profile_form title='Profile details' only %}
+                </div>
+                <div class='form_footer mt-2'>
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-success"><i class="bi bi-plus-circle"></i>Register</button>
+                    </div>
+                </div>
+            {% endif %}
+        </form>
     </div>
 </div>
 {% endblock body %}
