User register feature
User registration are now working.
Basic template for login and URL created.
Small changes to userProfile model.
New configuration in the adminPanel.
Utils file now has some new functions.

--- a/templates/users/form_render.html
+++ b/templates/users/form_render.html
@@ -18,7 +18,7 @@
                         </div>
                     {% endfor %}
                     {% else %}
-                        <div class='valid-feedback'>¡Looks good!</div>
+                        <div class='valid-feedback'>Looks good!</div>
                 {% endif %}
             </div>
         {% endfor %}
