--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,6 +1,7 @@
 {% extends 'users/main_base.html' %}
 {% block title %}Home{% endblock title %}
 {% block body %}
+{% include 'users/messages.html'%}
 <div class="card">
     <div class="card-header">Home</div>
     <div class="card-body">
