--- a/templates/users/users_create.html
+++ b/templates/users/users_create.html
@@ -1,16 +1,17 @@
 {% extends 'users/main_base.html' %}
 {% block title %}Home{% endblock title %}
 {% block body %}
+{% include 'users/messages.html'%}
 <div class="card">
     <div class="card-header">User creation form</div>
     <div class="card-body">
         <form method='post' novalidate>
             {% if basic_form and profile_form %}
                 <div class='user_config'>
-                    {% include 'users/form_render.html' with form=basic_form title='Basic details' only %}
+                    {% include 'users/form_render.html' with form=basic_form title='Log-in Information' only %}
                 </div>
                 <div class="user_profile mt-2">
-                    {% include 'users/form_render.html' with form=profile_form title='Profile details' only %}
+                    {% include 'users/form_render.html' with form=profile_form title='Profile information' only %}
                 </div>
                 <div class='form_footer mt-2'>
                     {% csrf_token %}
