--- a/templates/users/core/index.html
+++ b/templates/users/core/index.html
@@ -1,12 +1,13 @@
-{% extends 'users/main_base.html' %}
+{% extends 'users/base/main_base.html' %}
 {% block title %}Home{% endblock title %}
 {% block body %}
-{% include 'users/messages.html'%}
+{% include 'users/includes/messages.html'%}
 <div class="card">
     <div class="card-header">Home</div>
     <div class="card-body">
         <h5 class="card-title">Welcome!</h5>
         <p class="card-text">Please look around and test the different options that the app have to offer. Thank you :)</p>
+        <p class="card-text">Current session active: <span class='fw-bold'>{{request.user}}</span></p>
         <a href="#" class="btn btn-primary">Lest go!</a>
     </div>
 </div>
