Auth new features and brand new pages
Authentication new features(no browser cache & automatic redirection).
Brand new pages(user,settings,profiles & set new password)

--- a/templates/users/base/admin_base.html
+++ b/templates/users/base/admin_base.html
@@ -14,7 +14,7 @@
                     <div class="card-header">Navigation options</div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><a href='{% url "users:admin_home" %}' class="card-link">Home</a></li>
-                        <li class="list-group-item"><a href='#' class="card-link">Profile details</a></li>
+                        <li class="list-group-item"><a href='{% url "users:user_settings" %}' class="card-link">User settings</a></li>
                         <li class="list-group-item"><a href='{% url "users:admin_confirm_logout" %}' class="card-link">log out</a></li>
                     </ul>
                 </div>
