--- a/templates/users/admin/user_profile.html
+++ b/templates/users/admin/user_profile.html
@@ -1,10 +1,25 @@
 {% extends 'users/base/admin_base.html' %}
+{% load custom_tags %}
 {% block title %}User profile{% endblock title %}
 {% block body %}
 {% include 'users/includes/messages.html'%}
 <div class="card">
-    <div class="card-header">Profile information</div>
     <div class="card-body">
+        <form method='post' novalidate>
+            {% if profile_form %}
+                <div class="user_profile mt-2">
+                    {% include 'users/includes/form_render.html' with form=profile_form title='Profile information' only %}
+                </div>
+                <div class='mt-2'>
+                    {% csrf_token %}
+                    <button class='btn btn-success'>Update information</button>
+                </div>
+            {% endif %}
+        </form>
+        <div>
+            <hr>
+            <a href='{% url "users:user_settings" %}' class='btn btn-warning'>Go back to user settings</a>
+        </div>
     </div>
 </div>
 {% endblock body %}
