--- a/templates/users/base/admin_base.html
+++ b/templates/users/base/admin_base.html
@@ -13,9 +13,9 @@
                 <div class="card">
                     <div class="card-header">Navigation options</div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href='{% url "users:admin_home" %}' class="card-link">Home</a></li>
-                        <li class="list-group-item"><a href='{% url "users:user_settings" %}' class="card-link">User settings</a></li>
-                        <li class="list-group-item"><a href='{% url "users:admin_confirm_logout" %}' class="card-link">log out</a></li>
+                        <li class="list-group-item"><a href='{% url "users:admin_home" %}' class="card-link">Home</a> {% if active_page == 'admin_home' %} <span class="badge bg-primary">You're here!</span>{% endif %} </li>
+                        <li class="list-group-item"><a href='{% url "users:user_settings" %}' class="card-link">User settings</a> {% if active_page == 'user_settings' %} <span class="badge bg-primary">You're here!</span>{% endif %}</li>
+                        <li class="list-group-item"><a href='{% url "users:admin_confirm_logout" %}' class="card-link">log out</a> {% if active_page == 'confirm_logout' %} <span class="badge bg-primary">You're here!</span>{% endif %}</li>
                     </ul>
                 </div>
             </div>
