--- a/templates/users/core/users_create.html
+++ b/templates/users/core/users_create.html
@@ -13,7 +13,7 @@
                 <div class="user_profile mt-2">
                     {% include 'users/includes/form_render.html' with form=profile_form title='Profile information' only %}
                 </div>
-                <div class='form_footer mt-2'>
+                <div class='mt-2'>
                     {% csrf_token %}
                     <div class="mb-3">
                         <button type="submit" class="btn btn-success"><i class="bi bi-plus-circle"></i>Register</button>
