--- a/templates/users/admin/user_settings.html
+++ b/templates/users/admin/user_settings.html
@@ -15,7 +15,7 @@
 
 <div class="list-group mt-3">
     <a href='{% url "users:user_profile" %}' class="list-group-item list-group-item-action fs-5"><span class='text-dark fw-bold'>Profile details</span></a>
-    <a href='{% url "users:user_new_password" %}' class="list-group-item list-group-item-action fs-5"><span class='text-dark fw-bold'>Set new password</span></a>
+    <a href='{% url "users:user_set_new_password" %}' class="list-group-item list-group-item-action fs-5"><span class='text-dark fw-bold'>Set new password</span></a>
 </div>
 {% endblock body %}
 
