--- a/templates/users/auth/login.html
+++ b/templates/users/auth/login.html
@@ -5,24 +5,11 @@
 <div class="row">
     <div class="col-12 mt-5">
         <div class="card">
-            <div class="card-header">
-                <h3 class="text-center">Sign in</h3>
-            </div>
             <div class="card-body">
                 <form method="POST" novalidate>
                     {% if form %}
                         {% include 'users/includes/messages.html' %}
-                        {% for field in form %}
-                            <div class='mb-3'>
-                                <label for="{{field.id_for_label}}">{{field.label}}</label>
-                                {{field|setValidationClass}}
-                                {% if field.errors %}
-                                    {% for error in field.errors %}
-                                        <div class="invalid-feedback">{{error}}</div>
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                        {% endfor %}
+                        {% include 'users/includes/form_render.html' with form=form title='Login credentials' only %}
                         {% csrf_token %}
                         <div class="d-grid p-2">
                             <button class="btn btn-light" type="submit" style='background-color:#e3f2fd'>Log in</button>
