--- a/templates/users/core/users_create.html
+++ b/templates/users/core/users_create.html
@@ -3,12 +3,11 @@
 {% block body %}
 {% include 'users/includes/messages.html'%}
 <div class="card">
-    <div class="card-header">User creation form</div>
     <div class="card-body">
         <form method='post' novalidate>
             {% if basic_form and profile_form %}
                 <div class='user_config'>
-                    {% include 'users/includes/form_render.html' with form=basic_form title='Log-in Information' only %}
+                    {% include 'users/includes/form_render.html' with form=basic_form title='Credentials information' only %}
                 </div>
                 <div class="user_profile mt-2">
                     {% include 'users/includes/form_render.html' with form=profile_form title='Profile information' only %}
