--- a/templates/users/auth/login.html
+++ b/templates/users/auth/login.html
@@ -12,12 +12,13 @@
                         {% include 'users/includes/form_render.html' with form=form title='Login credentials' only %}
                         {% csrf_token %}
                         <div class="d-grid p-2">
+                        <p><a href='{% url "users:password_recovery_request" %}' class='fst-italic'>Forgot password?</a></p>
                             <button class="btn btn-light" type="submit" style='background-color:#e3f2fd'>Log in</button>
                         </div>
                     {% endif %}
                 </form>
                 <div class="text-center mt-2">
-                    <p>Not an account yet? <a href='{% url "users:user_creation" %}'>Create one here!</a></p>
+                    <p>Not an account yet? <a href='{% url "users:user_creation" %}'>Create one</a></p>
                 </div>
             </div>
         </div>
