--- a/templates/users/core/index.html
+++ b/templates/users/core/index.html
@@ -7,7 +7,7 @@
         <h5 class="card-title">Welcome!</h5>
         <p class="card-text">Please look around and test the different options that the app have to offer. Thank you :)</p>
         <p class="card-text">Current session active: <span class='fw-bold'>{{request.user}}</span></p>
-        <a href="#" class="btn btn-primary">Lest go!</a>
+        <a href='{% url "users:user_creation" %}' class="btn btn-primary">Lest go!</a>
     </div>
 </div>
 {% endblock body %}
