--- a/templates/users/admin/user_set_new_password.html
+++ b/templates/users/admin/user_set_new_password.html
@@ -1,19 +1,23 @@
-{% extends 'users/base/admin_base.html' %}
-{% block title %}New password{% endblock title %}
-{% block body %}
-{% include 'users/includes/messages.html'%}
+{% extends 'users/base/main_admin.html' %}
+{% block subtitle %}New password{% endblock subtitle %}
+{% block content %}
+{% include 'core/includes/messages.html'%}
 <div class="card">
     <div class="card-body">
         <form method='post' novalidate>
             {% if form %}
-                {% include 'users/includes/form_render.html' with form=form title='Setting new password' only %}
+                {% include 'core/includes/form_render.html' with form=form title='Setting new password' only %}
                 <div class='mt-2'>
                     {% csrf_token %}
                     <button class='btn btn-success'>Update password</button>
                 </div>
             {% endif %}
         </form>
+        <div>
+            <hr>
+            <a href='{% url "users:user_settings" %}' class='btn btn-warning'>Go back to user settings</a>
+        </div>
     </div>
 </div>
-{% endblock body %}
+{% endblock content %}
 
