--- a/templates/users/auth/logout.html
+++ b/templates/users/auth/logout.html
@@ -1,5 +1,5 @@
-{% extends 'users/base/standard_base.html' %}
-{% block title %}Log-out{% endblock title %}
+{% extends 'core/base/main_base.html' %}
+{% block title %}Auth kit - Log-out{% endblock title %}
 {% block content %}
 <div class="row">
     <div class="col-12 mt-5">
