--- a/templates/users/templates/password_recovery_form.html
+++ b/templates/users/templates/password_recovery_form.html
@@ -1,11 +1,11 @@
-{% extends 'users/base/main_base.html' %}
-{% block title %}Password recovery form{% endblock title %}
-{% block body %}
+{% extends 'users/base/main.html' %}
+{% block subtitle %}Password recovery form{% endblock subtitle %}
+{% block content %}
 <div class="card">
     <div class="card-body">
         <form method="POST" novalidate>
             {% if form %}
-                {% include 'users/includes/form_render.html' with form=form title='Password recovery' only %}
+                {% include 'core/includes/form_render.html' with form=form title='Password recovery' only %}
                 {% csrf_token %}
                 <div class="mt-2">
                     <button type="submit" class="btn btn-primary">Set new password</button>
@@ -14,5 +14,5 @@
         </form>
     </div>
 </div>
-{% endblock body %}
+{% endblock content %}
 
