--- a/templates/users/templates/password_recovery_request_done.html
+++ b/templates/users/templates/password_recovery_request_done.html
@@ -1,6 +1,6 @@
-{% extends 'users/base/main_base.html' %}
-{% block title %}Password reset confirm{% endblock title %}
-{% block body %}
+{% extends 'users/base/main.html' %}
+{% block subtitle %}Password reset confirm{% endblock subtitle %}
+{% block content %}
 <div class="card">
     <div class="card-body">
         <div class="alert alert-info" role="alert">
@@ -11,5 +11,5 @@
           </div>
     </div>
 </div>
-{% endblock body %}
+{% endblock content %}
 
