--- a/templates/users/admin/confirm_logout.html
+++ b/templates/users/admin/confirm_logout.html
@@ -1,6 +1,6 @@
-{% extends 'users/base/admin_base.html' %}
-{% block title %}logout confim{% endblock title %}
-{% block body %}
+{% extends 'users/base/main_admin.html' %}
+{% block subtitle %}logout confim{% endblock subtitle %}
+{% block content %}
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">Are you sure to logout?</h5>
@@ -10,5 +10,5 @@
         </form>
     </div>
 </div>
-{% endblock body %}
+{% endblock content %}
 
