--- a/templates/users/templates/password_recovery_request.html
+++ b/templates/users/templates/password_recovery_request.html
@@ -1,14 +1,14 @@
-{% extends 'users/base/main_base.html' %}
-{% block title %}Password recovery{% endblock title %}
-{% block body %}
-{% include 'users/includes/messages.html'%}
+{% extends 'users/base/main.html' %}
+{% block subtitle %}Password recovery{% endblock subtitle %}
+{% block content %}
+{% include 'core/includes/messages.html'%}
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">Attention <i class="bi bi-info-circle"></i></h5>
         <p class="card-text">Enter your email address below, and we’ll email instructions for setting a new one.</p>
         <form method="POST" novalidate>
             {% if form %}
-                {% include 'users/includes/form_render.html' with form=form title='Password recovery' only %}
+                {% include 'core/includes/form_render.html' with form=form title='Password recovery' only %}
                 {% csrf_token %}
                 <div class="mt-2">
                     <button type="submit" class="btn btn-primary">Recovery password</button>
@@ -17,5 +17,5 @@
         </form>
     </div>
 </div>
-{% endblock body %}
+{% endblock content %}
 
